--- a/frontend/MyShop/src/index.css
+++ b/frontend/MyShop/src/index.css
@@ -29,6 +29,9 @@ body {
 	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 @media (prefers-color-scheme: light) {
